<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 Eugen Rădulescu <synapticwebb@gmail.com>
  ~ This file is part of the CipherPass project ( https://github.com/synapticweb/CipherPass ).
  ~ See the LICENSE file in the project root for license terms.
  -->

<layout>

    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="net.synapticweb.cipherpass.settings.SettingsViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_layout"
        android:hint="@string/act_pass_hint"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:id="@+id/actual_passphrase"
            android:layout_marginBottom="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/new_pass_layout"
        android:hint="@string/new_pass_hint"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:id="@+id/new_passphrase"
            />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/new_pass_retype_layout"
            android:hint="@string/passphrase_retype_hint"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_gravity="start"
                android:id="@+id/new_passphrase_retype"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:maxWidth="50dp"
            android:layout_margin="15dp"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:visibility="@{model.working ? View.VISIBLE : View.GONE}"
            android:id="@+id/progress" />

</LinearLayout>

</layout>