...
    <string name="app_name">CipherPass</string>
    <string name="service_label">CipherPass</string>
    <string name="pass_notset_caption">Please set a password to encrypt the database. The password should be at least 6 characters long. Choose a random sequence of characters, not a dictionary word and do not write it down. If you lose it, you won\'t be able to recover your data. </string>
    <string name="pass_not_set_send_pass">Set password</string>
    <string name="pass_set_send_pass">UNLOCK DATABASE</string>
    <string name="passphrase_hint">Password</string>
    <string name="pass_incorect">The password you entered is not valid.</string>
    <string name="error_setting_pass">An error occurred while setting the password.</string>
    <string name="passphrase_retype_hint">Retype password</string>
    <string name="pass_no_match">The passwords entered do not match.</string>
    <string name="pass_empty">Password cannot be empty</string>
    <string name="one_more_backpress">Press the back button one more time to exit.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_insert_pass_title">Password required</string>
    <string name="settings_insert_pass_message">Please insert your password:</string>
    <string name="system_lock_next">Next</string>
    <string name="system_lock_finish">Finish</string>
    <string name="system_lock_soft_warning">Using the system provided authentication requires that encryption keys are stored on the device. This device is only able to provide software backed storage for encryption keys, which is less secure than hardware backed storage. Continue?</string>
    <string name="no_lock_soft_warning">Having no authentication requires that encryption keys are stored on the device. This device is only able to provide software backed storage for encryption keys, which is less secure than hardware backed storage. Continue?</string>
    <string name="system_lock_file_write_fail">There was an error processing your request.</string>
    <string name="system_lock_not_available">Only available on Android 6 and newer.</string>
    <string name="system_lock_device_not_secure">To use this feature, you have to secure your device with a password, pin or pattern.</string>
    <string name="system_lock_unavailable">The system provided authentification is unavailable.</string>
    <string name="auth_subtitle">Authentication required</string>
    <string name="change_pass_dialog_title">Change password</string>
    <string name="act_pass_hint">Actual password</string>
    <string name="new_pass_hint">New password</string>
    <string name="new_pass_retype_hint">Retype new password</string>
    <string name="change_pass_ok">Successfully changed the password.</string>
    <string name="change_pass_error">Error while changing password.</string>
    <string name="act_pass_empty">Actual password cannot be empty.</string>
    <string name="hash_change_success">The hash function was successfully changed</string>
    <string name="hash_change_error">Error changing the hash function.</string>
    <string name="enter_pass">Enter password:</string>
    <string name="new_entry">New entry</string>
    <string name="addedit_name">Entry name</string>
    <string name="addedit_id">Username</string>
...
    <string name="export_error">An error occurred while exporting the entries.</string>
    <string name="export_success">Entries were successfully exported.</string>
    <string name="export_menu_title">Export entries</string>
    <string name="import_menu_title">Import entries</string>
    <string name="import_error">An error occurred while importing entries.</string>
    <string name="replace_entries_title">Replace existing entries? (they cannot be recovered)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="import_success">Entries were successfully imported.</string>
    <string name="no_entries">There are currently no entries.</string>
    <string name="about_fragment_name">About</string>
    <string name="version">version</string>
    <string name="app_description">is a basic password manager for Android that stores password data in an encrypted database. This ensures secure storage of password data even on rooted devices.</string>
...
