<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="arguments"
            type="net.synapticweb.passman.settings.SystemLockFragmentArgs" />
        <variable
            name="viewModel"
            type="net.synapticweb.passman.settings.SystemLockViewModel" />
    </data>

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:visibility="gone"
            android:text='@{arguments.prefEntryValue == "system" ? @string/system_lock_soft_warning : @string/no_lock_soft_warning}'
            android:id="@+id/soft_storage_warning"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pass_layout"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/passphrase_hint"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_gravity="start"
            android:id="@+id/passphrase"
            android:layout_marginBottom="10dp"/>

    </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:maxWidth="50dp"
            android:layout_margin="15dp"
            android:indeterminate="true"
            android:layout_gravity="center_horizontal"
            android:visibility="@{viewModel.working ? View.VISIBLE : View.GONE}"
            android:id="@+id/progress" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:text="@android:string/no"
            android:visibility="gone"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/action_button"
            android:text="@string/system_lock_next"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:enabled="@{viewModel.working ? false : true}"/>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>

</layout>